fix overflow

--- a/src/styles/template-parts/photo-vertical.scss
+++ b/src/styles/template-parts/photo-vertical.scss
@@ -63,7 +63,6 @@ $k-4-419: calc(4px / $vert-img-frame-width-template);
   display: flex;
   position: relative;
   justify-content: center;
-  overflow: hidden;
 }
 
 .vert-img-wrap {
